Add support for downcasting of objects to a desired revision